--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+	font-family: 'Lato', Helvetica
+}
+
 html, body {
 	width: 100%;
 	height: 100%;
@@ -8,4 +12,17 @@ html, body {
 #map {
 	width: 100%;
 	height: 100%;
+}
+
+#controls {
+	width: 200px;
+	min-height: 200px;
+	position: fixed;
+	top: 10px;
+	right: 20px;
+	padding-top: 5px;
+}
+
+#controls > h5 {
+	text-align: center;
 }
