--- a/index.css
+++ b/index.css
@@ -21,8 +21,23 @@ html, body {
 	top: 10px;
 	right: 20px;
 	padding-top: 5px;
+	z-index: 10;
 }
 
 #controls > h5 {
 	text-align: center;
 }
+
+#images {
+	background-color: #e0e0e0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	text-align: center;
+}
+
+#images > img {
+	height: 100%;
+	display: none;
+}
+
